# spvd-virtmonitor

./: ChangeLog  Makefile.am  README.rst  configure.ac  virtmonitor.py  virtmonitor.py.in
debian/: changelog  control  rules
doc/: Makefile.am  spvd-virtmonitor.t2t
